initial linkwarden commits

--- a/imageroot/etc/state-include.conf
+++ b/imageroot/etc/state-include.conf
@@ -5,6 +5,8 @@
 # List here what you want to save during backup : volumes or file Path
 
 
-state/kickstart.sql
-volumes/kickstart-app
+state/linkwarden.sql
+linkwarden.pg_dump
+volumes/./data
+volumes/postgres-data
 
