changes to database handling

--- a/imageroot/etc/state-include.conf
+++ b/imageroot/etc/state-include.conf
@@ -5,7 +5,7 @@
 # List here what you want to save during backup : volumes or file Path
 
 
-state/linkwarden.sql
+state/database.env
 linkwarden.pg_dump
 volumes/./data
 volumes/postgres-data
