--- a/imageroot/systemd/user/linkwarden-app.service
+++ b/imageroot/systemd/user/linkwarden-app.service
@@ -23,8 +23,8 @@ ExecStart=/usr/bin/podman run --conmon-pidfile %t/linkwarden-app.pid \
     --pod-id-file %t/linkwarden.pod-id --replace -d --name  linkwarden-app \
     --volume ./data:/data/data \
     --env=LINKWARDEN_* \
-    --env POSTGRES_PASSWORD=Nethesis,1234 \
-    --env 'DATABASE_URL="postgresql://postgres:${POSTGRES_PASSWORD}@127.0.0.1:5432/linkwarden"' \
+    --env POSTGRES_PASSWORD=L1nkW@d3N \
+    --env 'DATABASE_URL="postgresql://linkwarden:${POSTGRES_PASSWORD}@127.0.0.1:5432/linkwarden"' \
     ${LINKWARDEN_IMAGE}
 ExecStop=/usr/bin/podman stop --ignore --cidfile %t/linkwarden-app.ctr-id -t 10
 ExecReload=/usr/bin/podman kill -s HUP linkwarden-app
