--- a/imageroot/systemd/user/linkwarden-app.service
+++ b/imageroot/systemd/user/linkwarden-app.service
@@ -24,7 +24,7 @@ ExecStart=/usr/bin/podman run --conmon-pidfile %t/linkwarden-app.pid \
     --volume ./data:/data/data:Z \
     --env=LINKWARDEN_* \
     --env POSTGRES_PASSWORD=L1nkW@d3N \
-    --env 'DATABASE_URL="postgresql://linkwarden:${POSTGRES_PASSWORD}@127.0.0.1:5432/linkwarden"' \
+    --env 'DATABASE_URL="postgresql://linkwarden:L1nkW@d3N@127.0.0.1:5432/linkwarden"' \
     ${LINKWARDEN_IMAGE}
 ExecStop=/usr/bin/podman stop --ignore --cidfile %t/linkwarden-app.ctr-id -t 10
 ExecReload=/usr/bin/podman kill -s HUP linkwarden-app
