--- a/imageroot/systemd/user/linkwarden-app.service
+++ b/imageroot/systemd/user/linkwarden-app.service
@@ -11,7 +11,8 @@ After=linkwarden.service postgresql-app.service
 [Service]
 Environment=PODMAN_SYSTEMD_UNIT=%n
 EnvironmentFile=%S/state/environment
-EnvironmentFile=-%S/state/smarthost.env
+EnvironmentFile=%S/state/smarthost.env
+EnvironmentFile=%S/state/database.env
 WorkingDirectory=%S/state
 Restart=always
 TimeoutStopSec=70
@@ -21,10 +22,12 @@ ExecStartPre=-runagent discover-smarthost
 ExecStart=/usr/bin/podman run --conmon-pidfile %t/linkwarden-app.pid \
     --cidfile %t/linkwarden-app.ctr-id --cgroups=no-conmon \
     --pod-id-file %t/linkwarden.pod-id --replace -d --name  linkwarden-app \
-    --volume ./data:/data/data:Z \
+    --volume linkwarden-data:/data/data:Z \
     --env=LINKWARDEN_* \
-    --env POSTGRES_PASSWORD=L1nkW@d3N \
-    --env 'DATABASE_URL="postgresql://linkwarden:L1nkW@d3N@127.0.0.1:5432/linkwarden"' \
+    --env POSTGRES_PASSWORD=${POSTGRES_PASSWORD} \
+    --env DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_ROOT_HOST}:5432/${POSTGRES_DATABASE}" \
+    --env NEXTAUTH_SECRET=${NEXTAUTH_SECRET} \
+    --env NEXTAUTH_URL=${NEXTAUTH_URL} \
     ${LINKWARDEN_IMAGE}
 ExecStop=/usr/bin/podman stop --ignore --cidfile %t/linkwarden-app.ctr-id -t 10
 ExecReload=/usr/bin/podman kill -s HUP linkwarden-app
