--- a/imageroot/systemd/user/postgresql-app.service
+++ b/imageroot/systemd/user/postgresql-app.service
@@ -19,12 +19,12 @@ ExecStartPre=/bin/mkdir -p %S/state/restore/
 ExecStart=/usr/bin/podman run --conmon-pidfile %t/postgresql-app.pid \
     --cidfile %t/postgresql-app.ctr-id --cgroups=no-conmon \
     --pod-id-file %t/linkwarden.pod-id --replace -d --name postgresql-app \
-    --env-file=%S/state/environment \
+    --env-file==%S/state/database.env  \
     --volume postgres-data:/var/lib/postgresql/data:Z \
     --volume %S/state/restore/:/docker-entrypoint-initdb.d/:Z \
     --env TZ=UTC \
     ${POSTGRES_IMAGE}
-ExecStartPost=/usr/bin/bash -c "while ! podman  exec postgresql-app psql -U linkwarden -d linkwarden ;  do sleep 5 ; done"
+#ExecStartPost=/usr/bin/bash -c "while ! podman  exec postgresql-app psql -U linkwarden -d linkwarden ;  do sleep 5 ; done"
 ExecStop=/usr/bin/podman stop --ignore --cidfile %t/postgresql-app.ctr-id -t 10
 ExecStopPost=/usr/bin/podman rm --ignore -f --cidfile %t/postgresql-app.ctr-id
 ExecReload=/usr/bin/podman kill -s HUP postgresql-app
