feat(back-up): added back up of volumes and states

--- a/imageroot/etc/state-include.conf
+++ b/imageroot/etc/state-include.conf
@@ -6,7 +6,8 @@
 
 
 state/database.env
+state/app.env
+state/app-config.env
 state/linkwarden.pg_dump
-volumes/./data
-volumes/postgres-data
+volumes/linkwarden-data
 
